syntax = "proto3";

package example.simple;

option go_package = "/a";

message MyMessage {
    int32 id = 1;
    string firsName = 2;
    bool is_validiated = 3;
}